--- a/WebApp/Views/Home/About.cshtml
+++ b/WebApp/Views/Home/About.cshtml
@@ -1,7 +1,131 @@
 ﻿@{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layoutweb.cshtml";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+<div class="col-lg-9 col-md-9 col-xs-12 col-sm-12  right">
+    <img  style="margin-top:50px; display: block; margin-left: auto; margin-right: auto; width: 70%;" src="https://lh3.googleusercontent.com/proxy/gIMSyTXXWAEPCeqFId4vf8A_PVJ7z4P07P6gn9-eGElocgbQ3ptyqGj9A2QjHpck9avVmPhltXWvRTSJH5Uv-qujBlv_MCb4NwoCfOoDb7AdaAVSwzSzvIIRVVRK1hf-Y-Oh5XWG7sE3IZ271ywP1Pvl-51IW7EwGdGDt3pr6UfpCTzOX-BPltUeuRU_xRGdaKbZLvLIyxlNp26hOtox4YbHjZNnlQ--uqI0Oc9pjD35tkfG-gzMsP_Ze0cgjQ"/>
+    <div class="the_h">
+        
+        <div style="text-align: center;">
+            &nbsp;
+        </div>
+        <div style="text-align: center;">
+            <img alt="" src="/upload/images/Sơn nhà đẹp(13).jpg" style="width: 500px; height: 280px;">
+        </div>
+        <h3 style="text-align: center;">
+            <em><span style="font-size: 12px;">Sơn nhà đẹp</span></em>
+        </h3>
+        <div>
+            <strong><span style="font-size: 16px;">1.<span style="white-space:pre"> </span>Chất lượng sơn.</span></strong>
+        </div>
+        <div>
+            <span style="font-size: 16px;">Chúng tôi phân phối đa dạng loại sơn, có những loại sơn tốt nhất trên thị trường hiện nay</span>
+        </div>
+        <div>
+            &nbsp;
+        </div>
+     
+        <div>
+            &nbsp;
+        </div>
+        <div>
+            <strong><span style="font-size: 16px;">2.<span style="white-space:pre"> </span>Kinh phí, loại sơn.</span></strong>
+        </div>
+        <div>
+            <span style="font-size: 16px;">Tư vấn, lên kế hoạch loại sơn phù hợp với số chi phí dự định của bạn</span>
+        </div>
+        <div>
+            &nbsp;
+        </div>
+        <div>
+            <strong><span style="font-size: 16px;">3.<span style="white-space:pre"> </span>Chiết khấu sơn.</span></strong>
+        </div>
+        <div>
+            <span style="font-size: 16px;">Chúng tôi chiết khấu cao nhất với quy định của nhà máy</span>
+        </div>
+        <div>
+            &nbsp;
+        </div>
 
-<p>Use this area to provide additional information.</p>
+        <div>
+            &nbsp;
+        </div>
+        <div>
+            <strong><span style="font-size: 16px;">4.<span style="white-space:pre"> G</span>iá sơn.</span></strong>
+        </div>
+        <div>
+            <span style="font-size: 16px;">Tất cả bảng giá được niêm yết của nhà máy</span>
+        </div>
+        <div>
+            &nbsp;
+        </div>
+       
+        <div>
+            &nbsp;
+        </div>
+        <div>
+            <strong><span style="font-size: 16px;">5.<span style="white-space:pre"> </span>Vận chuyển.</span></strong>
+        </div>
+        <div>
+            <span style="font-size: 16px;">Hỗ trợ vận chuyển nhanh nhất tận nơi nhà bạn</span>
+        </div>
+        <div>
+            &nbsp;
+        </div>
+        <div>
+            <strong><span style="font-size: 16px;">6.<span style="white-space:pre"> </span>Thợ thi công.</span></strong>
+        </div>
+        <div>
+            <span style="font-size: 16px;">Chúng tôi có thợ thi công nhiều năm kinh nghiệm</span>
+        </div>
+        <div>
+            &nbsp;
+        </div>
+       
+        <div>
+            &nbsp;
+        </div>
+        <div>
+            <strong><span style="font-size: 16px;">7.<span style="white-space:pre"> </span>Sơn chính hãng.</span></strong>
+        </div>
+        <div>
+            <span style="font-size: 16px;">Tất cả hàng hóa có chứng nhận của nhà máy</span>
+        </div>
+        <div>
+            &nbsp;
+        </div>
+        <div>
+            <strong><span style="font-size: 16px;">8.<span style="white-space:pre"> </span>Màu sơn.</span></strong>
+        </div>
+        <div>
+            <span style="font-size: 16px;">Hỗ trợ tư vấn màu sơn thẩm mỹ, tư vấn phong thủy.</span>
+        </div>
+        <div>
+            <span style="font-size: 16px;">Màu được pha máy vi tính với hệ thống máy pha màu hiện đại và độc quyền của hãng.</span>
+        </div>
+        <div>
+            &nbsp;
+        </div>
+        <div>
+            <em><span style="color: rgb(255, 0, 0);"><span style="font-size: 16px;">Đáp ứng nhiều hơn những gì bạn mong đợi…</span></span></em>
+        </div>
+        <div>
+            &nbsp;
+        </div>
+        <p style="margin: 0px; padding: 0px 0px 10px; box-sizing: border-box; color: rgb(1, 13, 2); font-family: Arial, Helvetica, sans-serif; text-align: justify;">
+            <strong>
+                <em>
+                    <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 16px;">
+                        Vui lòng liên hệ để nhận được những tư vấn chính xác và chi tiết nhất.<br style="margin: 0px; padding: 0px; box-sizing: border-box;">
+                        Rất hân hạnh được đồng hành cùng Quý khách hàng!
+                    </span>
+                </em>
+            </strong>
+        </p>
+      
+    </div>
+
+
+    <br>
+    <h4 style="text-align:center;">Minh Hùng Shop</h4>
+</div>
