--- a/WebApp/Views/Home/Category.cshtml
+++ b/WebApp/Views/Home/Category.cshtml
@@ -13,7 +13,7 @@
         {
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
-                    <a href="@Url.Action("Index", "Product", new { id = Model.products[i].Id })"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <a href="@Url.Action("Index", "Product", new { id = Model.products[i].Id })"><img class="card-img-top" src="@Model.products[i].Image" alt=""></a>
                     <div class="card-body">
                         <h4 class="card-title">
                             <a href="@Url.Action("Index", "Product", new { id = Model.products[i].Id })">@Model.products[i].Name</a>
