--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -15,13 +15,13 @@
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-                <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
+                <img class="d-block img-fluid" src="~/images/son-jotun.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
+                <img class="d-block img-fluid" src="~/images/dulux.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
+                <img class="d-block img-fluid" src="~/images/kova.jpg" alt="Third slide">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -38,7 +38,7 @@
         {
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
-                    <a href="@Url.Action("Index", "Product", new { id = item.Id })"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+                    <a href="@Url.Action("Index", "Product", new { id = item.Id })"><img class="card-img-top" src="@item.Image" alt=""></a>
                     <div class="card-body">
                         <h4 class="card-title">
                             <a href="@Url.Action("Index", "Product", new { id = item.Id })">@item.Name</a>
