add report chart

--- a/AdminApp/Views/Customer/Index.cshtml
+++ b/AdminApp/Views/Customer/Index.cshtml
@@ -9,7 +9,7 @@
 }
 
 <div class="card mb-4">
-    <div class="card-header"><i class="fas fa-fill mr-1"></i>Danh sách sản phẩm</div>
+    <div class="card-header"><i class="fas fa-user-friends mr-1"></i>Danh sách Khách hàng</div>
     <div class="card-body">
         <table class="table">
             <thead>
