--- a/AdminApp/Views/Shared/_Layout.cshtml
+++ b/AdminApp/Views/Shared/_Layout.cshtml
@@ -15,8 +15,8 @@
     <!-- <script src="https://kit.fontawesome.com/249698ff98.js" crossorigin="anonymous"></script> -->
 </head>
 <body class="sb-nav-fixed">
+    @*<partial name="_LoginPartial" />*@
     <!-- tobar -->
-   
     <!-- all body -->
     <div id="layoutSidenav">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
@@ -38,11 +38,6 @@
             <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                 <div class="sb-sidenav-menu">
                     <div class="nav">
-                        <a class="nav-link" href="/">
-                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                            Tổng quan
-                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                        </a>
                         <a class="nav-link collapsed" href="/Products"
                            @*data-toggle="collapse"
                            data-target="#collapseLayouts"
