--- a/AdminApp/Views/Shared/Categorys/_Layout.cshtml
+++ b/AdminApp/Views/Shared/Categorys/_Layout.cshtml
@@ -19,9 +19,9 @@
                             <a class="nav-link" href="/Producers">Nhà cung cấp</a>
                         </li>
                     </ul>
-                    <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Tìm kiếm" aria-label="Search">
-                        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Tìm kiếm</button>
+                    <form asp-action="Index" class="form-inline my-2 my-lg-0" method="get">
+                        <input class="form-control mr-sm-2" id="searchText" name="searchText" type="text" placeholder="Tìm kiếm" aria-label="Search" value=@ViewBag.searchText>
+                        <input class="btn btn-outline-light my-2 my-sm-0" type="submit" value="Tìm kiếm" />
                     </form>
                 </div>
             </nav>
