--- a/AdminApp/Views/Shared/Orders/_Layout.cshtml
+++ b/AdminApp/Views/Shared/Orders/_Layout.cshtml
@@ -10,13 +10,13 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" href="/Pending">Chờ duyệt</a>
+                            <a class="nav-link active" href="/Orders/Index">Tất cả</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/Approved">Đã duyệt</a>
+                            <a class="nav-link" href="/Orders/Approved">Đã duyệt</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/Canceled">Đã hủy</a>
+                            <a class="nav-link" href="/Orders/NonApproval">Chưa duyệt</a>
                         </li>
                     </ul>
                     <form class="form-inline my-2 my-lg-0">
