--- a/WebApp/Views/Home/About.cshtml
+++ b/WebApp/Views/Home/About.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_Layoutweb.cshtml";
 }
 <div class="col-lg-9 col-md-9 col-xs-12 col-sm-12  right">
-    <img  style="margin-top:50px; display: block; margin-left: auto; margin-right: auto; width: 70%;" src="https://lh3.googleusercontent.com/proxy/gIMSyTXXWAEPCeqFId4vf8A_PVJ7z4P07P6gn9-eGElocgbQ3ptyqGj9A2QjHpck9avVmPhltXWvRTSJH5Uv-qujBlv_MCb4NwoCfOoDb7AdaAVSwzSzvIIRVVRK1hf-Y-Oh5XWG7sE3IZ271ywP1Pvl-51IW7EwGdGDt3pr6UfpCTzOX-BPltUeuRU_xRGdaKbZLvLIyxlNp26hOtox4YbHjZNnlQ--uqI0Oc9pjD35tkfG-gzMsP_Ze0cgjQ"/>
+    <img  style="margin-top:50px; display: block; margin-left: auto; margin-right: auto; width: 70%;" src="~/images/about.png"/>
     <div class="the_h">
         
         <div style="text-align: center;">
