--- a/AdminApp/Views/Orders/Index.cshtml
+++ b/AdminApp/Views/Orders/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<DataAccess.Entities.Orders>
+﻿@model IEnumerable<DataAccess.Entities.OrderView>
 
 @{
     Layout = "Orders/_layout";
@@ -14,29 +14,36 @@
                     <th scope="col">Mã đơn hàng</th>
                     <th scope="col">Tên khách hàng</th>
                     <th scope="col">Số điện thoại</th>
-                    <th scope="col">Vùng</th>
-                    <th scope="col">Giá trị</th>
+                    <th scope="col">Địa chỉ</th>
                     <th scope="col">
                     </th>
                 </tr>
             </thead>
             <tbody>
                 @{
-                    for (int i = 0; i < 10; i++)
+                    int i = 0;
+                    foreach (var item in Model)
                     {
-
+                        
                         <tr>
                             <th scope="row">@(i+1)</th>
-                            <td>#161031</td>
-                            <td>Trương Hoàng Nam</td>
+                            <td>@item.OrderId</td>
+                            <td>@item.CustomerName</td>
                             <td>
-                                0949729491
+                                @item.CustomerPhone
                             </td>
-                            <td>HCM</td>
-                            <td>Giá trị</td>
-                            <td><div class="btn btn-primary">Chi tiết</div><div class="btn btn-danger">Hủy</div></td>
-                        </tr>
+                            <td>@item.CustomerAddress</td>
+                            <td>
 
+                                <a asp-action="Details" asp-route-id="@item.OrderId" class="text-info">
+                                    <div class="btn btn-primary">Chi tiết</div>
+                                </a>
+                                <a asp-action="Delete" asp-route-id="@item.OrderId" class="text-warning">   
+                                    <div class="btn btn-danger">Xóa</div>
+                                </a>  
+                            </td>
+                        </tr>
+                        i++;
                     }
                 }
             </tbody>
