--- a/WebApp/Views/Home/Category.cshtml
+++ b/WebApp/Views/Home/Category.cshtml
@@ -7,30 +7,58 @@
 }
 
 <!-- /.col-lg-3 -->
-<div class="col-lg-9">
-    <div class="row">
-        @for (int i = 0; i < Model.products.Count; i++)
-        {
-            <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card h-100">
-                    <a href="@Url.Action("Index", "Product", new { id = Model.products[i].Id })">
-                    <img class="card-img-top" src="@Model.products[i].Image" alt=""></a>
-                    <div class="card-body">
-                        <h4 class="card-title">
-                            <a href="@Url.Action("Index", "Product", new { id = Model.products[i].Id })">@Model.products[i].Name</a>
-                        </h4>
-                        <h5>@Model.products[i].Price VNĐ</h5>
-                        <p class="card-text">@Model.products[i].Description</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+<div class="col-lg-9" style="margin-top:50px">
+    <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+                <img class="d-block img-fluid" src="~/images/son-jotun.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block img-fluid" src="~/images/dulux.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block img-fluid" src="~/images/dulux.jpg" alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+   
+        <div class="row">
+            @for (int i = 0; i < Model.products.Count; i++)
+            {
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card h-100">
+                        <a href="@Url.Action("Index", "Product", new { id = Model.products[i].Id })">
+                            <img class="card-img-top" src="@Model.products[i].Image" alt="">
+                        </a>
+                        <div class="card-body">
+                            <h4 class="card-title">
+                                <a href="@Url.Action("Index", "Product", new { id = Model.products[i].Id })">@Model.products[i].Name</a>
+                            </h4>
+                            <h5>@Model.products[i].Price VNĐ</h5>
+                            <p class="card-text">@Model.products[i].Description</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                        </div>
                     </div>
                 </div>
-            </div>
-        }
+            }
 
 
-    </div>
+        </div>
+    
 </div>
-
 
