--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -6,7 +6,8 @@
 }
 
 <!-- /.col-lg-3 -->
-<div class="col-lg-9">
+<div class="col-lg-9" style="margin-top:50px">
+    
     <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -21,7 +22,7 @@
                 <img class="d-block img-fluid" src="~/images/dulux.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block img-fluid" src="~/images/kova.jpg" alt="Third slide">
+                <img class="d-block img-fluid" src="~/images/dulux.jpg" alt="Third slide">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
