--- a/WebApp/Views/Pay/Index.cshtml
+++ b/WebApp/Views/Pay/Index.cshtml
@@ -3,140 +3,132 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layoutweb.cshtml";
 }
-<link href="css-pay/bootstrap.css" rel="stylesheet" id="bootstrap-css">
+<link href="~/css-pay/bootstrap.css" rel="stylesheet" />
 <script src="js-pay/bootstrap.min.js"></script>
 <script src="js-pay/jquery-3.5.1.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
-<div  class="col-lg-9">
-    <div class="container wrapper">
-        <div class="row cart-head">
-            <div class="container">
-                <div class="row">
-                    <p></p>
-                </div>
-                <div class="row">
-                    <div style="display: table; margin: auto;">
-                        <span class="step step_complete"> <a href="#" class="check-bc">Cart</a> <span class="step_line step_complete"> </span> <span class="step_line backline"> </span> </span>
-                        <span class="step step_complete"> <a href="#" class="check-bc">Checkout</a> <span class="step_line "> </span> <span class="step_line step_complete"> </span> </span>
-                        <span class="step_thankyou check-bc step_complete">Thank you</span>
-                    </div>
-                </div>
-                <div class="row">
-                    <p></p>
-                </div>
-            </div>
-        </div>
-        <div class="row cart-body">
-            <form class="form-horizontal" method="post" action="">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-md-push-6 col-sm-push-6">
-                    <!--REVIEW ORDER-->
-                    <div class="panel panel-info">
-                        <div class="panel-heading">
-                            Review Order <div class="pull-right"><small><a class="afix-1" href="#">Edit Cart</a></small></div>
-                        </div>
-                        <div class="panel-body">
 
-                            @if (Model.products.Count > 0)
-                            {
-                                decimal? total = 0;
-                                foreach (var item in Model.products)
-                                {
-                                    <div class="form-group">
-                                        <div class="col-sm-3 col-xs-3">
-                                            <img class="img-responsive" src="//c1.staticflickr.com/1/466/19681864394_c332ae87df_t.jpg" />
-                                        </div>
-                                        <div class="col-sm-6 col-xs-6">
-                                            <div class="col-xs-12">@item.Name</div>
-                                            <div class="col-xs-12"><small>Số lượng:<span>@item.Quantity</span></small></div>
-                                        </div>
-                                        <div class="col-sm-3 col-xs-3 text-right">
-                                            <h6><span>$</span>@(item.Quantity * item.Price)</h6>
-                                        </div>
-                                    </div>
-                                    <div class="form-group"><hr /></div>
-                                    total += item.Quantity * item.Price;
+<div class="row cart-body">
+    
+    <form class="form-horizontal" method="post" action="">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-md-push-6 col-sm-push-6">
+            <!--REVIEW ORDER-->
+            <div class="panel panel-info">
 
-                                }
-                                <div class="form-group">
-                                    <div class="col-xs-12">
-                                        <strong>Order Total</strong>
-
-                                        <div class="pull-right"><span>$</span><span>@total</span></div>
-                                    </div>
-                                </div>
-
-                            }
-                            else
-                            {
-                                <div class="form-group">
-                                    <div class="col-xs-12">
-                                        <strong>Order Total</strong>
-
-                                        <div class="pull-right"><span>$</span><span>0 VNĐ</span></div>
-                                    </div>
-                                </div>
-                            }
-
-                        </div>
-                    </div>
-                    <!--REVIEW ORDER END-->
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-md-pull-6 col-sm-pull-6">
-                    <!--SHIPPING METHOD-->
-                    <div class="panel panel-info">
-                        <div class="panel-heading">Address</div>
-                        @using (Html.BeginForm("Index", "Pay", FormMethod.Post))
+                <div class="panel-body">
+                    @{
+                        if (Model.products.Count > 0)
                         {
-                            @Html.AntiForgeryToken()
-                            <div class="panel-body">
+                            decimal? total = 0;
+                            foreach (var item in Model.products)
+                            {
+                                <div class="form-group">
+                                    <div class="col-sm-3 col-xs-3">
+                                        <img class="img-responsive" src="@item.Image" style="width: 55px; height: 55px;" />
+                                    </div>
+                                    <div class="col-sm-6 col-xs-6">
+                                        <div class="col-xs-12">@item.Name</div>
+                                        <div class="col-xs-12"><small>Số lượng:<span>@item.Quantity</span></small></div>
+                                    </div>
+                                    <div class="col-sm-3 col-xs-3 text-right">
+                                        <h6><span>$</span>@(item.Quantity * item.Price)</h6>
+                                    </div>
+                                </div>
+                                <div class="form-group"><hr /></div>
+                                total += item.Quantity * item.Price;
 
-                                <div class="form-group">
-                                    <div class="col-md-12">
-                                        <h4>Shipping Address</h4>
-                                    </div>
-                                </div>
+                            }
+                            <div class="form-group">
+                                <div class="col-xs-12">
+                                    <strong>Tổng đơn hàng</strong>
 
-                                <div class="form-group">
-                                    <div class="col-md-12"><strong>Full Name</strong></div>
-                                    <div class="col-md-12">
-                                        @Html.TextBoxFor(model => model.customer.Name, new { htmlAttributes = new { @class = "form-control" }  })
-                                    </div>
+                                    <div class="pull-right"><span>$</span><span>@total</span></div>
                                 </div>
-                                <div class="form-group">
-                                    <div class="col-md-12"><strong>Address:</strong></div>
-                                    <div class="col-md-12">
-                                        @Html.TextBoxFor(model => model.customer.Address, new { htmlAttributes = new { @class = "form-control" } })
-                                    </div>
-                                </div>
+                            </div>
 
-                                <div class="form-group">
-                                    <div class="col-md-12"><strong>Phone Number:</strong></div>
-                                    <div class="col-md-12">
-                                        @Html.TextBoxFor(model => model.customer.Phone, new { htmlAttributes = new { @class = "form-control" } })
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="col-md-12"><strong>Email Address:</strong></div>
-                                    <div class="col-md-12">
-                                        @Html.TextBoxFor(model => model.customer.Email, new { htmlAttributes = new { @class = "form-control" } })
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="col-md-6 col-sm-6 col-xs-12">
-                                        <button type="submit" class="btn btn-primary btn-submit-fix">Place Order</button>
-                                    </div>
+                        }
+                        else
+                        {
+
+                            <div class="form-group">
+                                <div class="col-xs-12">
+                                    <strong>Tổng đơn hàng</strong>
+
+                                    <div class="pull-right"><span>$</span><span>0 VNĐ</span></div>
                                 </div>
                             </div>
                         }
-                    </div>
-                    <!--SHIPPING METHOD END-->
-                    
+
+                    }
                 </div>
-
-            </form>
+            </div>
+            <!--REVIEW ORDER END-->
         </div>
-        <div class="row cart-footer">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-md-pull-6 col-sm-pull-6">
+            <!--SHIPPING METHOD-->
+            @{
+                if (ViewBag.Status == "Success")
+                {
+                    <div class="alert alert-success" role="alert">@ViewBag.Status</div>
+                }
+                else if (ViewBag.Status == "Fail")
+                {
+                    <div class="alert alert-danger" role="alert">@ViewBag.Status</div>
+                }
+            }
+            <div class="panel panel-info">
+                <div class="panel-heading">Thông tin người nhận</div>
+                @using (Html.BeginForm("Index", "Pay", FormMethod.Post))
+                {
+                    @Html.AntiForgeryToken()
+                    <div class="panel-body">
+
+                        <div class="form-group">
+                            <div class="col-md-12">
+                                <h4>Thông tin khách hàng</h4>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-md-12"><strong>Họ và tên</strong></div>
+                            <div class="col-md-12">
+                                @Html.TextBoxFor(model => model.customer.Name, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.customer.Name, "* Không bỏ trống", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-12"><strong>Địa chỉ:</strong></div>
+                            <div class="col-md-12">
+                                @Html.TextBoxFor(model => model.customer.Address, new { htmlAttributes = new { @class = "form-control" } })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-md-12"><strong>Số điện thoại:</strong></div>
+                            <div class="col-md-12">
+                                @Html.TextBoxFor(model => model.customer.Phone, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.customer.Phone, "* Không bỏ trống", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-12"><strong>Địa chỉ Email:</strong></div>
+                            <div class="col-md-12">
+                                @Html.TextBoxFor(model => model.customer.Email, new { htmlAttributes = new { @class = "form-control" } })
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                <button type="submit" class="btn btn-primary btn-submit-fix">Xác nhận</button>
+                            </div>
+
+                        </div>
+                    </div>
+                }
+            </div>
+            <!--SHIPPING METHOD END-->
 
         </div>
-    </div>
+
+    </form>
 </div>
+ 
